Update README.md for JDK 23